# Multy-Core

./: .clang-format  .travis.yml  CMakeLists.txt  CODING_STYLE.md  LICENSE.txt  README.md  account.cpp  account.h  clang-format.txt  common.cpp  common.h  error.cpp  error.h  keys.cpp  keys.h  keytree.cpp  keytree.h  main.cpp  mnemonic.cpp  mnemonic.h  wallet_manager.cpp  wallet_manager.h
internal/: utility.h
multy_core/: CMakeLists.txt  account.cpp  account.h  api.h  common.h  error.h  keys.cpp  keys.h  mnemonic.cpp  mnemonic.h
multy_core/internal/: account.cpp  account.h  account_base.cpp  account_base.h  bitcoin_account.cpp  bitcoin_account.h  ethereum_account.cpp  ethereum_account.h  hd_path.cpp  hd_path.h  key.cpp  key.h  key_ptr.h  sha3.cpp  u_ptr.cpp  u_ptr.h  utility.cpp  utility.h
multy_core/src/: common.cpp  keys.cpp  mnemonic.cpp
multy_core/src/golos/: golos_facade.cpp  golos_transaction.cpp  golos_transaction.h
multy_test/: CMakeLists.txt  serialized_keys_test_base.cpp  serialized_keys_test_base.h  smoke_test.cpp  test_account.cpp  test_bitcoin_account.cpp  test_bitcoin_transaction.cpp  test_common.cpp  test_ethereum_account.cpp  test_golos_account.cpp  test_keys.cpp  test_mnemonic.cpp  utility.cpp  utility.h  value_printers.cpp
multy_transaction/: properties.h  transaction.h
multy_transaction/internal/: bitcoin_transaction.cpp  properties.cpp  properties.h
multy_transaction/src/: properties.cpp  transaction.cpp
wallet_core/: CMakeLists.txt  account.cpp  account.h  api.h  bip44_coin_types.h  common.cpp  common.h  error.cpp  error.h  keys.cpp  keys.h  mnemonic.cpp  mnemonic.h
wallet_core/internal/: account_base.cpp  account_base.h  bitcoin_account.cpp  bitcoin_account.h  ethereum_account.cpp  ethereum_account.h  key.h  key_ptr.h  utility.cpp  utility.h
wallet_test/: CMakeLists.txt  bip39_test_cases.h  run_tests.cpp  run_tests.h  test_account.cpp  test_keys.cpp  test_mnemonic.cpp  test_utility.cpp  utility.cpp  utility.h  value_printers.cpp  value_printers.h
